# Research-Agent-Swarm

./: .gitignore  config.py  env.example  package.json  pyproject.toml  requirements.txt  setup.py  test_improvements.py
apps/cli/: main.py
data/: memory.json
data/test_vector_store/: index.faiss  index.pkl
data/vector_store/: index.faiss  index.pkl
